ingress/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ingress
spec:
  selector:
    app: ingress
  type: ClusterIP
  ports:
    - name: web
      port: 3000
      targetPort: 3000
      protocol: TCP
    - name: metrics
      port: 8080
      targetPort: 8080
      protocol: TCP
