ingress/base/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ingress
spec:
  to:
    kind: Service
    name: ingress
  port:
    targetPort: web
